--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: "androidx.navigation.safeargs"
+apply plugin: 'kotlinx-serialization'
+
+
 
 android {
     compileSdkVersion 30
@@ -15,7 +18,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -64,6 +67,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
     implementation "androidx.fragment:fragment-ktx:1.3.1"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 
@@ -72,4 +76,10 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //kotlin serialization
+   // implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.1.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.11.0"
+
+    implementation 'com.android.support:multidex:1.0.3'
 }
