--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
