--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: "androidx.navigation.safeargs"
 apply plugin: 'kotlinx-serialization'
+apply plugin: 'realm-android'
 
 
 
@@ -81,5 +82,17 @@ dependencies {
    // implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.1.0"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.11.0"
 
+    //multidex
     implementation 'com.android.support:multidex:1.0.3'
+
+    //workmnager,realm
+    def work_version = "2.5.0"
+    implementation "androidx.work:work-runtime:$work_version"
+    implementation 'io.realm:android-adapters:2.1.0'
+
+    //Gliding image
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
+    //    Android custom progress
+    implementation "com.wang.avi:library:2.1.3"
 }
