--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,6 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
     //    Android custom progress
     implementation "com.wang.avi:library:2.1.3"
+
+    implementation 'com.akexorcist:round-corner-progress-bar:2.1.1'
 }
