--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,6 @@ dependencies {
     implementation "com.wang.avi:library:2.1.3"
 
     implementation 'com.akexorcist:round-corner-progress-bar:2.1.1'
+
+    implementation 'com.samigehi:loadingview:1.1'
 }
